--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hospital</title>
     <!-- Favicon -->
-    <link rel="icon" href="/src/assets/image.png" type="image/png" />
+    <link rel="icon" href="/hospital-logo.png" type="image/png" />
   </head>
   <body>
-    <!-- React root -->
     <div id="root"></div>
   </body>
 </html>
